Fix deployment, add featured image, image upload

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -9,6 +9,11 @@
     "esModuleInterop": true,
     "allowJs": true,
     "strict": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     // Wasp needs the following settings enable IDE support in your source
     // files. Editing them might break features like import autocompletion and
     // definition lookup. Don't change them unless you know what you're doing.
